Completed team member services
