# routes/api.php
@@ -20,16 +20,16 @@ use App\Http\Controllers\Api\V1\ConfessionController;
 
 Route::prefix('v1')->group(function () {
     // Public routes
+    // Auth
     Route::post('register', [ApiAuthController::class, 'register'])->middleware('throttle:public');
     Route::post('login', [ApiAuthController::class, 'login'])->middleware('throttle:login');
 
-    Route::get('confessions', [ConfessionController::class, 'index']); // View confessions (public)
-    Route::post('confessions', [ConfessionController::class, 'store']); // Submit confessions (public)
-    Route::get('confessions/{confession}', [ConfessionController::class, 'show']); // View a single confession (public)
 
-    // Route::apiResource('team-members', [TeamMemberController::class]);
-    Route::get('team-members', [TeamMemberController::class, 'index']);
-    Route::post('team-members', [TeamMemberController::class, 'store']);
+    // Confessions
+    Route::apiResource('confessions', ConfessionController::class)->only(['store', 'show']);
+
+    // Team Members
+    Route::apiResource('team-members', TeamMemberController::class)->only(['index', 'show']);
 
     // Protected routes
     Route::middleware(['auth:sanctum', 'throttle:api'])->group(function () {
@@ -37,15 +37,9 @@ Route::prefix('v1')->group(function () {
 
         // Admin-only routes
         Route::middleware('check.role:admin')->group(function () {
-            // Route::apiResource('team-members', TeamMemberController::class); // Admin can manage team members
-            Route::apiResource('confessions', ConfessionController::class)->except(['index', 'store', 'show']); // Admin can manage all confessions (update, delete, etc.)
+            Route::apiResource('team-members', TeamMemberController::class)->except(['index', 'show']); 
+            Route::apiResource('confessions', ConfessionController::class)->except(['store', 'show']); 
         });
-
-        // User-specific routes (admin and user roles)
-        // Route::middleware('check.role:admin,user')->group(function () {
-        //     Route::get('team-members', [TeamMemberController::class, 'index']); // Users can view team members
-        //     Route::get('team-members/{teamMember}', [TeamMemberController::class, 'show']); // Users can view a specific team member
-        // });
     });  
 });
 
